some spacing fixed

--- a/css/style.css
+++ b/css/style.css
@@ -134,11 +134,11 @@ body {
 
 /* ---- HERO ---- */
 .section-hero {
-  background-image: linear-gradient(rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.4)), url('../images/hero-background.jpg');
+  background-image: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)), url('../images/hero-background.jpg');
   background-size: cover;
   box-shadow: inset 0 0 5rem rgba(255, 255, 255, 255);
   background-blend-mode: overlay;
-  padding: 12rem 0 8rem 0;
+  padding: 12rem 0 10rem 0;
   margin-bottom: 4rem;
 }
 
@@ -204,6 +204,7 @@ body {
 .strength {
   max-width: 120rem;
   margin: 0 auto;
+  padding: 0 2rem;
   display: flex;
   align-items: flex-start;
   margin-bottom: 16rem;
@@ -212,7 +213,7 @@ body {
 .highlights {
   max-width: 80%;
   margin: 0 auto;
-  padding: 2rem 2rem;
+  /* padding: 2rem 2rem; */
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   align-items: center;
@@ -226,6 +227,7 @@ body {
 .career {
   max-width: 120rem;
   margin: 0 auto;
+  padding: 0 2rem;
   display: flex;
   align-items: flex-start;
   margin-bottom: 6rem;
@@ -248,19 +250,17 @@ body {
   height: 4rem;
   margin: 0 auto;
   display: grid;
-  grid-template-columns: repeat(5, 130px);
+  grid-template-columns: repeat(5, 120px);
   grid-template-rows: repeat(3, 1fr);
   align-items: center;
-  justify-items: center;
+  justify-items: space-between;
   gap: 4rem;
   row-gap: 0;
 }
 
 .underline {
-  display: flex;
-  flex-direction: column;
-  align-self: start;
   padding: .1px 0.5rem;
+  text-align: center;
   background-color: var(--brand-light-medium-gray);
 }
 
